<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="crash_toast_text">我崩溃了，选择邮件方式，将错误信息发给我吧。</string>

    <string name="category_type">类型</string>

    <string name="app_name">代码阅读器</string>
    <string name="file_explorer">文件浏览器</string>
    <string name="action_share">分享</string>
    <string name="action_new_folder">新建文件夹</string>
    <string name="action_fullscreen">全屏</string>
    <string name="action_back">返回</string>
    <string name="action_open">打开文件</string>
    <string name="file_not_exists">文件不存在</string>
    <string name="file_too_large">文件大小不能超过%1$s</string>
    <string name="loading">加载中</string>
    <string name="action_refresh">刷新</string>
    <string name="action_sortby">排序</string>
    <string name="action_sort_by_name">按名称</string>
    <string name="action_sort_by_date">按日期</string>
    <string name="action_sort_by_size">按大小</string>

    <string name="action_history">浏览历史</string>

    <string name="double_tap_exit_fullscreen">双击退出全屏</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="doc_recent">最近打开</string>
    <string name="doc_star">星标文件</string>
    <string name="doc_c">C</string>
    <string name="doc_cpp">C++</string>
    <string name="doc_css">CSS</string>
    <string name="doc_html">HTML</string>
    <string name="doc_lisp">LISP</string>
    <string name="doc_java">JAVA</string>
    <string name="doc_js">JS</string>
    <string name="doc_lua">LUA</string>
    <string name="doc_perl">PERL</string>
    <string name="doc_python">PYTHON</string>
    <string name="doc_ruby">RUBY</string>
    <string name="doc_sql">SQL</string>
    <string name="doc_vb">VB</string>
    <string name="doc_xml">XML</string>

    <string name="empty_root">空空如也</string>
    <string name="action_starred">收藏</string>
    <string name="pref_header_general">常用</string>

    <string name="title_activity_settings">设置</string>

    <!-- Strings related to Settings -->
    <!-- Example General settings -->
    <string name="pref_title_doc_type">选择文件类型</string>
    <string name="pref_title_doc_type_summary">请选择文件类型</string>

    <!-- Example settings for Notifications -->
    <string name="action_feedback">反馈</string>
    <string name="pref_title_vote">点赞</string>
    <string name="pref_title_mail">给我发邮件</string>
    <string name="pref_title_directory">选择默认扫描路径</string>
    <string name="pref_title_directory_summary">扫描整个SD卡路径会很慢，请尽量选择代码所在路径</string>
    <string name="pref_title_version">当前版本号</string>
    <string name="pref_title_libraries">libraries</string>

    <string name="pref_key_version_code">version_code</string>
    <string name="pref_key_libraries">libraries</string>

    <string name="action_settings">设置</string>
    <string name="action_configure_doctype">配置文件类型</string>
    <string name="title_activity_home">@string/app_name</string>
    <string name="title_activity_doctype">文件类型配置</string>
    <string name="pref_key_email">email</string>
    <string name="pref_key_comment">comment</string>


</resources>
