<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
	
    <!--
         NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it.
    -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->

    <Preference
        android:title="@string/pref_title_vote"
        android:key="@string/pref_key_comment"/>
    <!--<intent android:action="android.intent.action.VIEW"-->
        <!--android:data="market://details?id=com.wkswind.codereader"/>-->
    <Preference android:title="@string/pref_title_mail"
        android:key="@string/pref_key_email"/>
    <!--<intent-->
        <!--android:action="android.intent.action.VIEW"-->
        <!--android:data="mailto:wkswind@gmail.com"/>-->
    <Preference android:key="@string/pref_key_version_code"
        android:title="@string/pref_title_version"/>
    <Preference
        android:key="@string/pref_key_libraries"
        android:title="@string/pref_title_libraries"/>
</PreferenceScreen>
